k8s/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1  
kind: ValidatingWebhookConfiguration          
metadata:
  name: webhook-validating
webhooks:
- name: webhook-service.default.svc
  clientConfig:
    service:
      name: webhook-service
      namespace: default
      path: "/validate"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVZmJ3dE8yd0JXZWpKdFhkdS93cTZsOHVTVTlBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFlRncweU5qQTBNVGd5TURReU5UZGFGdzB5TnpBMApNVGd5TURReU5UZGFNQlV4RXpBUkJnTlZCQU1NQ25kbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEUC9zb1prZlFqMnkyMFpQMW5lMG02aGR0SCsyVGtKYU85RXRBc0hwVUgKWk11enYwSjJ2Q3YyVkR2TkpWZ0o2N1dJdDBzTkxjVUxVQ2NLYVRwUWhrbkN1WVdPS0VLcVNTUWxTSlZaOW1HQgorNXpxeFA3Tjk3Y [...]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
    scope: "Namespaced"
  admissionReviewVersions: ["v1"]
  sideEffects: None
